[F] Fix: Next course doesn't show up on mobile devices

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -68,6 +68,14 @@
     box-shadow: 0 -2px 9px 0 #ecebeb;
 }
 
+footer
+{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+}
+
 #prev-course
 {
     // Up center
